--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Within this markdown cell, copy the line of text you used to import the data from your Terminal. This way, future analysts will be able to repeat your process.\n",
     "\n",
-    "e.g.: Import the dataset with `YOUR IMPORT TEXT HERE`"
+    "e.g.: Import the dataset with: --type json -d uk_food -c establishments --drop --jsonArray Resources/establishments.json"
    ]
   },
   {
@@ -38,9 +38,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-20T16:13:18.375-0700\tconnected to: mongodb://localhost/\n",
-      "2024-04-20T16:13:18.378-0700\tdropping: uk_food.establishments\n",
-      "2024-04-20T16:13:20.106-0700\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
+      "2024-04-23T15:27:30.093-0700\tconnected to: mongodb://localhost/\n",
+      "2024-04-23T15:27:30.096-0700\tdropping: uk_food.establishments\n",
+      "2024-04-23T15:27:31.692-0700\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['admin', 'autosaurus', 'classDB', 'config', 'epa', 'fruits_db', 'local', 'petsitly_marketing', 'travel_db', 'uk_food']\n"
+      "['admin', 'autosaurus', 'classDB', 'config', 'epa', 'fruits_db', 'local', 'met', 'petsitly_marketing', 'travel_db', 'uk_food']\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -131,32 +131,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': '27 Granville Road',\n",
-      " 'AddressLine2': 'St Margarets Bay',\n",
-      " 'AddressLine3': 'Kent',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Lenox House',\n",
-      " 'BusinessType': 'Hotel/bed & breakfast/guest house',\n",
-      " 'BusinessTypeID': 7842,\n",
+      "{'AddressLine1': 'West Cottage',\n",
+      " 'AddressLine2': 'South Foreland Lighthouse',\n",
+      " 'AddressLine3': 'The Front',\n",
+      " 'AddressLine4': 'St Margarets Bay',\n",
+      " 'BusinessName': 'Mrs Knotts Tea Room',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.440906956158,\n",
-      " 'FHRSID': 632212,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000043474',\n",
+      " 'Distance': 4587.492467848017,\n",
+      " 'FHRSID': 429991,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000055200',\n",
       " 'LocalAuthorityCode': '182',\n",
       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
       " 'LocalAuthorityName': 'Dover',\n",
       " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DS',\n",
-      " 'RatingDate': '2020-03-17T00:00:00',\n",
+      " 'PostCode': 'CT15 6HP',\n",
+      " 'RatingDate': '2019-05-02T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('66244c0e42becf52a5b49de1'),\n",
-      " 'geocode': {'latitude': '51.152411', 'longitude': '1.385585'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/632212',\n",
+      " '_id': ObjectId('662835d2a44334aa6db47d92'),\n",
+      " 'geocode': {'latitude': '51.14061', 'longitude': '1.371894'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/429991',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -166,7 +166,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 0}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -242,17 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7f8d220aa9c0>"
+       "<pymongo.results.InsertOneResult at 0x7facf86d86c0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('66246670c4742b9a12301659'),\n",
+      " '_id': ObjectId('662835d31b43f89b29f51425'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -312,19 +312,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('66244c0e42becf52a5b49de2'),\n",
+       "{'_id': ObjectId('662835d2a44334aa6db47d92'),\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': 1}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,17 +346,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7f8d013ac600>"
+       "<pymongo.results.UpdateResult at 0x7fad392f9ac0>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
       "  'PostCode': 'SE18 7DY',\n",
       "  'RightToReply': '',\n",
       "  'SchemeType': 'FHRS',\n",
-      "  '_id': ObjectId('66246670c4742b9a12301659'),\n",
+      "  '_id': ObjectId('662835d31b43f89b29f51425'),\n",
       "  'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       "  'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}]\n"
      ]
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -440,17 +440,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7f8d240fc240>"
+       "<pymongo.results.DeleteResult at 0x7fad18c83380>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[]\n",
+      "There are 0 remaining documents that contain the Dover Local Authority\n"
      ]
     }
    ],
@@ -478,19 +479,20 @@
     "# Checking if any remaining documents include Dover\n",
     "query = {'LocalAuthorityName': 'Dover'}\n",
     "results = establishments.find(query)\n",
-    "pprint(list(results))"
+    "pprint(list(results))\n",
+    "print(f'There are {establishments.count_documents(query)} remaining documents that contain the Dover Local Authority')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('66244c0e42becf52a5b4a0c6'),\n",
+       "{'_id': ObjectId('662835d2a44334aa6db48075'),\n",
        " 'FHRSID': 647177,\n",
        " 'ChangesByServerID': 0,\n",
        " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
@@ -528,7 +530,7 @@
        "   'href': 'https://api.ratings.food.gov.uk/establishments/647177'}]}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,17 +560,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7f8d013af700>"
+       "<pymongo.results.UpdateResult at 0x7fad18c81540>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,17 +601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7f8d11cd2980>"
+       "<pymongo.results.UpdateResult at 0x7fad3931fb80>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,17 +624,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7f8d337086c0>"
+       "<pymongo.results.UpdateResult at 0x7fad38eb0740>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,14 +651,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('66244c0e42becf52a5b4a0c6'),\n",
+       "{'_id': ObjectId('662835d2a44334aa6db48075'),\n",
        " 'FHRSID': 647177,\n",
        " 'ChangesByServerID': 0,\n",
        " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
@@ -694,7 +696,7 @@
        "   'href': 'https://api.ratings.food.gov.uk/establishments/647177'}]}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
